# bindey

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
include/bindey/: binding.h  property.h
test/: CMakeLists.txt  binding.test.cpp  property.test.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
